src/test/ui/issues/50000-59999/issue-56031.rs
struct T;

impl for T {}
//~^ ERROR missing trait in a trait impl

fn main() {}
